--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -1,6 +1,6 @@
 DISTRO = "ostro"
 DISTRO_NAME = "Ostro OS"
-DISTRO_VERSION = "1.0~M2~snapshot-${DATE}"
+DISTRO_VERSION = "1.0~snapshot-${DATE}"
 SDK_VENDOR = "-ostrosdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 SDK_NAME_PREFIX = "ostro"
