ostro: enable ptests
This causes all recipes which support ptests to be compiled such that
they generate additional -ptest packages. This is a pre-requisite for
adding these tests to the dev image.

Relates-to: IOTOS-1092

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -49,6 +49,13 @@ DISTROOVERRIDES .= "${OSTRO_SMACK_OVERRIDE}"
 # differently. This distro feature enables that.
 OSTRO_DEFAULT_DISTRO_FEATURES += "ima"
 
+# ptests are useful for QA. Enabling them in the distro creates
+# additional packages in each recipe that supports ptests and thus
+# allows building images with those tests included. Enabling ptests
+# should have no effect on normal packages; if there is an effect,
+# then that is a bug in the recipe.
+OSTRO_DEFAULT_DISTRO_FEATURES += "ptest"
+
 # Remove currently unsupported distro features from global defaults
 DISTRO_FEATURES_DEFAULT_remove = "x11 3g"
 
