ostro.conf: Set SDK_UPDATE_URL
Installed eSDK can be updated if SDK_UPDATE_URL is set.
Our CI builds and publishes the eSDKs to a server which
we can use to fetch updates from.

Set SDK_UPDATE_URL to point to the latest build output.
Note: this URL must be updated before making a release.

We abuse the *_PACKAGE_FEED_* URL variables here since
URLs they point to the same place where eSDK is copied.

Fixes: IOTOS-1177

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -4,6 +4,13 @@ DISTRO_VERSION = "1.0~snapshot-${DATE}"
 SDK_VENDOR = "-ostrosdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 SDK_NAME_PREFIX = "ostro"
+SDK_UPDATE_URL = "\
+		${OSTRO_PACKAGE_FEED_BASEURL}/\
+		${OSTRO_PACKAGE_FEED_PUBLISHDIR}/\
+		${OSTRO_PACKAGE_FEED_BUILDID}/\
+		${OSTRO_SDK_EXT_DIR}/\
+		${MACHINE}\
+"
 
 MAINTAINER = "Ostro Dev <ostro-dev@lists.ostroproject.org>"
 
@@ -13,6 +20,7 @@ OSTRO_PACKAGE_FEED_BASEURL ??= "http://download.ostroproject.org"
 OSTRO_PACKAGE_FEED_PUBLISHDIR ??= "download/builds"
 OSTRO_PACKAGE_FEED_BUILDID ??= "ostro/latest"
 OSTRO_PACKAGE_FEED_PREFIX ??= "rpm"
+OSTRO_SDK_EXT_DIR ??= "sdk-ext"
 
 OSTRO_DEFAULT_DISTRO_FEATURES = "systemd bluez5 pam"
 OSTRO_DEFAULT_EXTRA_RDEPENDS ??= ""
