local.conf.sample: switch from rpm to ipk as default package format
We have no technical requirement to use rpm. smart+rpm are a bit more
complete when it comes to on-device package handling, but as we do
not support that, we might as well use ipk. It is considered faster
and more efficient (see http://www.yoctoproject.org/docs/latest/mega-manual/mega-manual.html#ref-classes-package).

Also avoids the rpm dependency on beecrypt, which is not supposed
to be used anymore.

Fixes: IOTOS-922

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/local.conf.sample
+++ b/meta-ostro/conf/local.conf.sample
@@ -100,8 +100,11 @@ DISTRO ?= "ostro"
 #  - 'package_ipk' for ipk files are used by opkg (a debian style embedded package manager)
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
-# We default to rpm:
-PACKAGE_CLASSES ?= "package_rpm"
+# We default to ipk because it is faster/smaller and good enough for
+# image creation. On-device package management is disabled by default
+# and thus the additional features offered for that by rpm/deb do not
+# matter.
+PACKAGE_CLASSES ?= "package_ipk"
 
 #
 # SDK/ADT target architecture
