ostro.conf: whitelist libmicrohttpd needed by Soletta's Dev App
To enable Soletta's Dev App, we need libmicrohttpd. Make it available
by whitelisting the recipe in openembedded-layer.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -145,6 +145,7 @@ PNWHITELIST_networking-layer += " \
 PNWHITELIST_openembedded-layer += " \
     gmock \
     gtest \
+    libmicrohttpd \
     libsocketcan \
     can-utils \
     giflib \
