ostro: enable meta-soletta layer and whitelist desired recipes
Enable meta-soletta layer in ostro but only take in the necessary
recipes.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/bblayers.conf.sample
+++ b/meta-ostro/conf/bblayers.conf.sample
@@ -48,6 +48,7 @@ OSTRO_LAYERS += "##OEROOT##/meta-openembedded/meta-python"
 # OSTRO_LAYERS += "##OEROOT##/meta-openembedded/meta-xfce"
 # OSTRO_LAYERS += "##OEROOT##/meta-openembedded/toolchain-layer"
 OSTRO_LAYERS += "##OEROOT##/meta-java"
+OSTRO_LAYERS += "##OEROOT##/meta-soletta"
 
 BBLAYERS ?= "${OSTRO_LAYERS}"
 
