--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -126,6 +126,7 @@ PNWHITELIST_LAYERS = " \
     webserver \
     xfce-layer \
     meta-java \
+    meta-soletta \
 "
 
 # Using += here so that we extend an earlier value from local.conf
@@ -198,6 +199,14 @@ PNWHITELIST_meta-java += " \
     servlet2.3-native \
     logkit-native \
     avalon-framework-api-native \
+"
+PNWHITELIST_meta-soletta += " \
+    soletta \
+    soletta-dev-app \
+    lss \
+    python3-jsonschema \
+    python3-jsonschema-native \
+    graphviz \
 "
 
 # Java bootstrapping
