Ostro OS: document and configure developer image mode
Including the new ostro-os-development.inc file in a local.conf
will configure images as intended for the images that the Ostro OS
project will be shipping:

  * local access via serial or console immediately offers a root prompt
  * /etc/motd clearly marks the images as developer images and warns
    against using them for products

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/local.conf.sample
+++ b/meta-ostro/conf/local.conf.sample
@@ -246,6 +246,14 @@ CONF_VERSION = "1"
 #
 #INHERIT += "isafw"
 
+# Ostro OS development images get built when uncommenting
+# the following line.
+#
+# Do not do this in production! The resulting images
+# are not secure. See doc/building-images.rst for further
+# instructions.
+#
+# require conf/distro/include/ostro-os-development.inc
 
 #
 # Misc configuration
