ostro.conf: fix world build
This is necessary because otherwise
    oe-selftest --run-tests iotsstatetests.SStateTests.test_sstate_samesigs
will fail when it encounters unbuilable recipes.

The blacklisting of obsolete AppFW recipes can be removed because
the revised AppFW only has recipes which work.

The blacklisting of unbuildable meta-intel-iot-security recipes is likely
to be permanent, because the recipes are still in use elsewhere and thus
will not be removed.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -271,17 +271,17 @@ PNBLACKLIST[oprofileui-server] = "Has undesired machine-dependency"
 RDEPENDS_packagegroup-core-device-devel_remove_pn-packagegroup-core-device-devel = "oprofileui-server"
 RDEPENDS_packagegroup-core-tools-profile_remove_pn-packagegroup-core-tools-profile = "lttng-tools"
 
-# Next AppFW update is expected to fix this. Remove this line then.
-PNBLACKLIST[example-session] = "Currently broken"
-
 # Disable certain components which are in meta-intel-iot-security, but
 # which we do not want in the image anymore.
+PNBLACKLIST[app-runas] = "obsolete"
 PNBLACKLIST[security-manager] = "obsolete"
 PNBLACKLIST[cynara] = "obsolete"
+PNBLACKLIST[dbus-cynara] = "obsolete"
 PNBLACKLIST[dlog] = "obsolete"
 PNBLACKLIST[libslp-db-util] = "obsolete"
 PNBLACKLIST[tizen-platform-config] = "obsolete"
 PNBLACKLIST[tizen-platform-wrapper] = "obsolete"
+PNBLACKLIST[packagegroup-security-framework] = "unused"
 
 # It is uncertain whether rhino is really an allarch package. It's signature
 # is different among machines, causing the iotsstatetests.SStateTests.test_sstate_samesigs
