--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -201,19 +201,22 @@ PNWHITELIST_meta-python += " \
 "
 PNWHITELIST_multimedia-layer += ""
 PNWHITELIST_networking-layer += " \
+    iftop \
     lowpan-tools \
     traceroute \
 "
 PNWHITELIST_openembedded-layer += " \
+    atop \
     can-utils \
     dash \
     giflib \
     gmock \
     gtest \
-    libsocketcan \
-    can-utils \
-    giflib \
+    htop \
+    iotop \
     krb5 \
+    libmicrohttpd \
+    libsocketcan \
     pkcs11-helper \
     vim \
 "
