openssh: wait for xtables lock.
There is a race condition where parallel iptables and ip6tables
invocations fail to obtain the xtables lock. This causes setting the
firewall rules to fail. Add "-w" option to the command lines to wait for
the lock instead of giving up.

Signed-off-by: Ismo Puustinen <ismo.puustinen@intel.com>

--- a/meta-ostro/recipes-security/openssh/files/openssh-ipv4.conf
+++ b/meta-ostro/recipes-security/openssh/files/openssh-ipv4.conf
@@ -2,5 +2,5 @@
 After=iptables.service
 
 [Socket]
-ExecStartPre=/usr/sbin/iptables -A INPUT -p tcp --dport ssh -j ACCEPT
-ExecStopPost=/usr/sbin/iptables -D INPUT -p tcp --dport ssh -j ACCEPT
+ExecStartPre=/usr/sbin/iptables -w -A INPUT -p tcp --dport ssh -j ACCEPT
+ExecStopPost=/usr/sbin/iptables -w -D INPUT -p tcp --dport ssh -j ACCEPT
