iptables: added a mechanism to override default firewall rules.
To override the default iptables rules, you need to create your own
custom firewall rule recipe that contains the firewall rule files. In
this recipe you need to install your iptables and ip6tables rule files
to the root filesystem and provide symbolic links to them from
${datadir}/iptables-settings/iptables.rules and
${datadir}/iptables-settings/ip6tables.rules. The default firewall rules
are provided by iptables-settings-default package.

An example custom iptables rule recipe follows. The actual firewall
rules are supposed to be in files/custom-iptables.rules and
files/custom-ip6tables.rules files. The system integrator needs to make
sure that the correct configuration package ends to the images, for
example by setting VIRTUAL-RUNTIME_iptables-settings variable.

---------------------------------------------------------------

DESCRIPTION = "Custom iptables and ip6tables settings."
LICENSE = "MIT"
LIC_FILES_CHKSUM = "file://${COMMON_LICENSE_DIR}/MIT;md5=0835ade698e0bcf8506ecda2f7b4f302"

SRC_URI = " \
    file://custom-iptables.rules \
    file://custom-ip6tables.rules \
"

inherit update-alternatives

ALTERNATIVE_${PN} += "iptables.rules ip6tables.rules"
ALTERNATIVE_LINK_NAME[iptables.rules] = "${datadir}/iptables-settings/iptables.rules"
ALTERNATIVE_LINK_NAME[ip6tables.rules] = "${datadir}/iptables-settings/ip6tables.rules"
ALTERNATIVE_TARGET[iptables.rules] = "${datadir}/iptables-settings/custom-iptables.rules"
ALTERNATIVE_TARGET[ip6tables.rules] = "${datadir}/iptables-settings/custom-ip6tables.rules"

FILES_${PN} += "${datadir}/iptables-settings/"

do_install() {
    install -d ${D}${datadir}/iptables-settings
    install -m 0644 ${WORKDIR}/custom-iptables.rules ${D}${datadir}/iptables-settings/custom-iptables.rules
    install -m 0644 ${WORKDIR}/custom-ip6tables.rules ${D}${datadir}/iptables-settings/custom-ip6tables.rules
}

---------------------------------------------------------------

Signe

--- a/meta-ostro/recipes-security/iptables/files/ip6tables.service.in
+++ b/meta-ostro/recipes-security/iptables/files/ip6tables.service.in
@@ -1,6 +1,6 @@
 [Unit]
-Description=iptables firewall
-ConditionPathExists=/etc/iptables/ip6tables.rules
+Description=ip6tables firewall
+ConditionPathExists=/usr/share/iptables-settings/ip6tables.rules
 DefaultDependencies=false
 Before=network-pre.target multi-user.target shutdown.target
 Conflicts=shutdown.target
@@ -8,7 +8,7 @@ Conflicts=shutdown.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/sbin/ip6tables-restore /etc/iptables/ip6tables.rules
+ExecStart=/usr/sbin/ip6tables-restore {datadir}/iptables-settings/ip6tables.rules
 
 [Install]
 WantedBy=network.target
