--- a/meta-ostro/recipes-security/iptables/files/iptables.service.in
+++ b/meta-ostro/recipes-security/iptables/files/iptables.service.in
@@ -1,6 +1,6 @@
 [Unit]
 Description=iptables firewall
-ConditionPathExists=/etc/iptables/iptables.rules
+ConditionPathExists=/usr/share/iptables-settings/iptables.rules
 DefaultDependencies=false
 Before=network-pre.target multi-user.target shutdown.target
 Conflicts=shutdown.target
@@ -8,7 +8,7 @@ Conflicts=shutdown.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/sbin/iptables-restore /etc/iptables/iptables.rules
+ExecStart=/usr/sbin/iptables-restore {datadir}/iptables-settings/iptables.rules
 
 [Install]
 WantedBy=network.target
