ostro.conf: URLs at download.ostrproject.org
Update of configuration URLs for production site

Signed-off-by: Alexander Kanevskiy <kad@linux.intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -17,9 +17,8 @@ MAINTAINER = "Ostro Dev <ostro-dev@lists.ostroproject.org>"
 TARGET_VENDOR = "-ostro"
 
 OSTRO_PACKAGE_FEED_BASEURL ??= "http://download.ostroproject.org"
-OSTRO_PACKAGE_FEED_PUBLISHDIR ??= "download/builds"
-OSTRO_PACKAGE_FEED_BUILDID ??= "ostro/latest"
-OSTRO_PACKAGE_FEED_PREFIX ??= "rpm"
+OSTRO_PACKAGE_FEED_PUBLISHDIR ??= "releases/ostro-os/qa-approved"
+OSTRO_PACKAGE_FEED_BUILDID ??= "latest"
 OSTRO_SDK_EXT_DIR ??= "sdk-ext"
 
 OSTRO_DEFAULT_DISTRO_FEATURES = "systemd bluez5 pam"
