ostro.conf: update location of source mirrors
Correct URL for Ostro Project source mirrors on production
infrastructure

Signed-off-by: Alexander Kanevskiy <kad@linux.intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -70,7 +70,7 @@ QEMU_TARGETS ?= "arm i386 x86_64"
 
 # Set PREMIRRORS to prioritize Ostro OS autobuilder source cache.
 # The OSTRO_SOURCE_MIRROR_URL can be overriden in local.conf. 
-OSTRO_SOURCE_MIRROR_URL ??= "http://download.ostroproject.org/bb-cache/sources/"
+OSTRO_SOURCE_MIRROR_URL ??= "https://download.ostroproject.org/mirror/sources/"
 SOURCE_MIRROR_URL = "${OSTRO_SOURCE_MIRROR_URL}"
 INHERIT += "own-mirrors"
 
