Add gSSO framework and related dependencies
Add recipes for gSSO framework, including daemon, client library and
plugins.

Also adds recipes for following dependency components:
	ecryptfs-utils
	libgsasl

Following new components are white-listed in ostro.conf:
	pkcs11-helper

Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -154,6 +154,7 @@ PNWHITELIST_openembedded-layer += " \
     can-utils \
     giflib \
     krb5 \
+    pkcs11-helper \
 "
 PNWHITELIST_perl-layer += ""
 PNWHITELIST_ruby-layer += ""
