--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -4,13 +4,17 @@ DISTRO_VERSION = "1.0~snapshot-${DATE}"
 SDK_VENDOR = "-ostrosdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 SDK_NAME_PREFIX = "ostro"
-SDK_UPDATE_URL = "\
-		${OSTRO_PACKAGE_FEED_BASEURL}/\
-		${OSTRO_PACKAGE_FEED_PUBLISHDIR}/\
-		${OSTRO_PACKAGE_FEED_BUILDID}/\
-		${OSTRO_SDK_EXT_DIR}/\
-		${MACHINE}\
-"
+SDK_UPDATE_URL = "${OSTRO_SDK_UPDATE_URL}"
+
+# SDK_UPDATE_URL defines the eSDK updateserver configured in
+# devtool.conf when populate-sdk-ext is run.
+#
+# Example SDK_UPDATE_URLs are:
+# https://download.ostroproject.org/builds/ostro-os/latest/sdk-ext/<machine> OR
+# https://download.ostroproject.org/releases/ostro-os/milestone/<release>/sdk-ext/<machine>
+#
+# The defaultsetting can be overridded in local.conf
+OSTRO_SDK_UPDATE_URL ??= "https://download.ostroproject.org/builds/ostro-os/latest/sdk-ext/${MACHINE}"
 
 # When building in a CI system with swupd enabled, OS_VERSION must be
 # set to a consistent value for all builds. See ostroproject-ci.inc
@@ -61,11 +65,6 @@ INHERIT += "ostro-update-alternatives"
 MAINTAINER = "Ostro Dev <ostro-dev@lists.ostroproject.org>"
 
 TARGET_VENDOR = "-ostro"
-
-OSTRO_PACKAGE_FEED_BASEURL ??= "http://download.ostroproject.org"
-OSTRO_PACKAGE_FEED_PUBLISHDIR ??= "releases/ostro-os/qa-approved"
-OSTRO_PACKAGE_FEED_BUILDID ??= "latest"
-OSTRO_SDK_EXT_DIR ??= "sdk-ext"
 
 OSTRO_DEFAULT_DISTRO_FEATURES = "systemd bluez5 pam"
 OSTRO_DEFAULT_EXTRA_RDEPENDS ??= ""
