ostro.conf: configure extensible SDK
A series of flags define how extensible SDK can be built. This commit
sets Ostro specific flags for the extensible SDK.

SDK_EXT_TYPE = "minimal"
Ostro uses "minimal" type which minimizes the size of the downloaded
SDK itself and configures devtool to use Ostro's SSTATE_MIRROR
(defined in sdk-extra.conf).

SDK_INCLUDE_PKGDATA = "1"
The package data available gets recorded.

SDK_RECRDEP_TASKS = "do_deploy_files do_uefiapp"
Set custom tasks from Ostro layers as recursive dependencies to
do_populate_sdk to ensure their SSTATE gets copied. These tasks are
used defined in meta-iotqa/meta-security-smack/meta-ostro.

SDK_INHERIT_BLACKLIST = "buildhistory icecc buildhistory-extra buildstats-summary archiver isafw test-iot"
Blacklist inherited classes that are known to break proper data restore
from SSTATE when populating the SDK. This addresses a problem seen as
"Unexpected tasks left over to be executed".

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -13,8 +13,20 @@ SDK_UPDATE_URL = "${OSTRO_SDK_UPDATE_URL}"
 # https://download.ostroproject.org/builds/ostro-os/latest/sdk-ext/<machine> OR
 # https://download.ostroproject.org/releases/ostro-os/milestone/<release>/sdk-ext/<machine>
 #
-# The defaultsetting can be overridded in local.conf
+# The default setting can be overridded in local.conf
 OSTRO_SDK_UPDATE_URL ??= "https://download.ostroproject.org/builds/ostro-os/latest/sdk-ext/${MACHINE}"
+
+# Extensible SDK configuration: Ostro uses "minimal" type which minimizes the size of the downloaded
+# SDK itself and configures devtool to use SSTATE_MIRROR (defined in o sdk-extra.conf).
+# The package data available gets recorded.
+SDK_EXT_TYPE = "minimal"
+SDK_INCLUDE_PKGDATA = "1"
+
+# Set custom tasks from Ostro layers as recursive dependencies to do_populate_sdk.
+SDK_RECRDEP_TASKS = "do_deploy_files do_uefiapp"
+
+# Blacklist inherited classes that break proper data restore from SSTATE when populating the SDK.
+SDK_INHERIT_BLACKLIST = "buildhistory icecc buildhistory-extra buildstats-summary archiver isafw test-iot"
 
 # When building in a CI system with swupd enabled, OS_VERSION must be
 # set to a consistent value for all builds. See ostroproject-ci.inc
