local.conf.sample: Document RM_OLD_IMAGE usage
RM_OLD_IMAGE is a useful setting to automatically clean up
the old image before a new one gets build.

This commit documents RM_OLD_IMAGE usage in building-images.rst
and adds it in local.conf.sample. However, the setting is kept
disabled by default.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/local.conf.sample
+++ b/meta-ostro/conf/local.conf.sample
@@ -271,3 +271,6 @@ CONF_VERSION = "2"
 #
 # Misc configuration
 #
+# Remove the old image from the deploy directory before the new
+# one gets created. This is useful to save disk space.
+# RM_OLD_IMAGE = "1"
