ostro: set OS_VERSION for swupd
The bundle information created by meta-swupd and the VERSION_ID used
in the os-release file must match, and therefore the value must be set
at the distro level. OS_VERSION is the variable used by meta-swupd,
so that is what is getting used in all places.

How OS_VERSION is set differs between CI and local builds. For the CI,
the expectation is that long-term the CI system will determine the
right OS_VERSION and set it explicitly. As fallback until then, the
OS_VERSION is derived from the integer part of the BUILD_ID set in the
Jenkins CI by multiplying it by 10.

During a local build, we can explicitly use ${DATETIME} to have a
reasonable default if developers do not set OS_VERSION manually. The
default is to use a modified OS_VERSION if something else triggers an
image build, but a OS_VERSION change itself won't trigger an image and
bundle build.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -12,6 +12,30 @@ SDK_UPDATE_URL = "\
 		${MACHINE}\
 "
 
+# When building in a CI system with swupd enabled, OS_VERSION must be
+# set to a consistent value for all builds. See ostroproject-ci.inc
+# for an example how that works with Jenkins.
+#
+# In local builds, we only have ${DATETIME} as something that
+# increments automatically, but it is too large for an integer number
+# on 32 bit systems. Therefore we substract the 2016 as the initial
+# year in which Ostro OS started using swupd (assumes a 64 build host,
+# to avoid integer overflows in Python itself) and ignore the
+# seconds.
+#
+# The default behavior is to not rebuild just because OS_VERSION
+# changed. If that is desired, include in local.conf:
+#   VERSION_ID = "${OS_VERSION}"
+# This will cause the os-release package to be rebuilt each time
+# OS_VERSION changes, and that in turn causes an image and bundle
+# rebuild.
+#
+# For more predictable results is possible to set OS_RELEASE manually,
+# either in local.conf or in the environment like this:
+#   BB_ENV_EXTRAWHITE="$BB_ENV_EXTRAWHITE OS_VERSION" OS_VERSION=110 bitbake ...
+OS_VERSION ?= "${@ str(((int('${DATETIME}') - 20160000000000) / 100) * 10) }"
+OS_VERSION[vardepsexclude] += "DATETIME"
+
 MAINTAINER = "Ostro Dev <ostro-dev@lists.ostroproject.org>"
 
 TARGET_VENDOR = "-ostro"
