--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -306,3 +306,7 @@ INPUTANALYZER_WHITELIST = '/(meta|meta-yocto-bsp|meta-intel|meta-java|meta-oic|m
 # MASK incompatible .bbappends from meta-soletta. meta-soletta's systemd
 # .bbappend is in conflict with our needs.
 BBMASK = "meta-soletta/recipes-configure/systemd"
+
+# re-use uninative shim released by Yocto Project / OE
+require conf/distro/include/yocto-uninative.inc
+INHERIT += "uninative"
