ostro: prefer Busybox/Toybox over coreutils, with exceptions
Ostro OS tries to build minimal images and thus prefers Busybox or
Toybox over coreutils or any other package providing similar
functionality. For technical reasons, this is crucial when building
swupd bundles: the component that gets chosen must be consistent
across bundles and must be installed in the os-core bundle, otherwise we
end up with dangling symlinks when the symlink is in the os-core but
the component it points to is not.

The choice is made in the ostro-image.bbclass to ensure consistency
between local, personal developer builds, regardless whether it is
with or without swupd, and CI builds. Developers can still pick
coreutils in custom images by completely removing Busybox/Toybox.

The priorities of Toybox/Busybox must be higher than those of any
alternatives. procps uses 200, so we start at 300.

Both systemd and the efi_combo_updater have problems when
"mount" is provided by busybox: systemd fails to remount
the rootfs read/write and the updater segfaults because
it does not parse the output correctly.

For now we avoid these problems by sticking to the traditional mount
utilities from util-linux.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -36,6 +36,28 @@ SDK_UPDATE_URL = "\
 OS_VERSION ?= "${@ str(((int('${DATETIME}') - 20160000000000) / 100) * 10) }"
 OS_VERSION[vardepsexclude] += "DATETIME"
 
+# Ostro OS tries to build minimal images and thus prefers Busybox or
+# Toybox over coreutils or any other package providing similar
+# functionality. For technical reasons, this is crucial when building
+# swupd bundles: Busybox/Toybox must be picked consistently, even when
+# a bundle pulls in alternatives like coreutils which normally would
+# have a higher priority.
+#
+# This gets achieved in two ways:
+# 1. via ostro-update-alternatives.bbclass we modify all packages
+#    so that their update-alternatives priority can be modified
+#    during install time
+# 2. in ostro-image.bbclass we reconfigure those priorities
+#    as necessary
+#
+# This is still a change that is done consistently for all images,
+# whether they use swupd or not, to ensure that the result is
+# identical. Doing it at image creation time reduces the need
+# for recompilations of packages and opens up the possibility
+# for downstream developers to override the defaults while
+# reusing pre-compiled binaries from our sstate.
+INHERIT += "ostro-update-alternatives"
+
 MAINTAINER = "Ostro Dev <ostro-dev@lists.ostroproject.org>"
 
 TARGET_VENDOR = "-ostro"
