ostro.conf: disable pulseaudio in DISTRO_FEATURES
pulseaudio do_install currently fails due to missing
audio group in Ostro's default base-passwd configuration.

This breaks world build. Since pulseaudio is not used, it's OK
to disable it in DISTRO_FEATURES.

In addition, set the recipe in PNBLACKLIST until the build
is fixed.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -135,7 +135,7 @@ INHERIT += "own-mirrors"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = ""
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit pulseaudio"
 
 require conf/distro/include/ostro_security_flags.inc
 require conf/distro/include/ostro-x11.inc
@@ -288,6 +288,7 @@ PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 # would have to be listed).
 
 INHERIT += "blacklist"
+PNBLACKLIST[pulseaudio] = "Cannot be built due to missing audio group, not supported."
 PNBLACKLIST[gnome-desktop3] = "Cannot be built due to missing graphics stack, not supported."
 PNBLACKLIST[epiphany] = "Cannot be built due to missing graphics stack, not supported."
 PNBLACKLIST[connman-gnome] = "Cannot be built due to missing gtk+, not supported."
