ostro.conf: fix world build
Quite a few recipes are failing to build in world build. This commit
PNBLACKLISTs the remaining broken ones.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -288,6 +288,16 @@ PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 # would have to be listed).
 
 INHERIT += "blacklist"
+PNBLACKLIST[initramfs-live-install-testfs] = "DEPENDS on grub which is PNBLACKLISTed, not supported."
+PNBLACKLIST[initramfs-live-install] = "DEPENDS on grub which is PNBLACKLISTed, not supported."
+PNBLACKLIST[grub] = "World build fails on beaglebone."
+PNBLACKLIST[u-boot-tools-edison] = "World build fails, not supported."
+PNBLACKLIST[u-boot-fw-utils] = "World build fails, not supported."
+PNBLACKLIST[mdns] = "World build fails, not supported."
+PNBLACKLIST[iotivity-sensorboard] = "World build fails with a linker error, not supported."
+PNBLACKLIST[xuser-account] = "Cannot be built due to missing group, not supported."
+PNBLACKLIST[sysstat] = "Cannot be built due to missing group, not supported."
+PNBLACKLIST[builder] = "Cannot be built due to missing group, not supported."
 PNBLACKLIST[pulseaudio] = "Cannot be built due to missing audio group, not supported."
 PNBLACKLIST[gnome-desktop3] = "Cannot be built due to missing graphics stack, not supported."
 PNBLACKLIST[epiphany] = "Cannot be built due to missing graphics stack, not supported."
