ostro.conf: exclude swupd-server from world
Skip swupd-server from world build because of a build failure. Only
swupd-server-native is used so this is a safe choice.

The failure is:

configure.ac:15: error: possibly undefined macro: AC_MSG_ERROR
       If this token and others are legitimate, please use m4_pattern_allow.
       See the Autoconf documentation.
configure.ac:20: error: possibly undefined macro: AS_IF
ERROR: autoreconf execution failed.

Signed-off-by: Mikko Ylinen <mikko.ylinen@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -388,3 +388,8 @@ INHERIT += "uninative"
 # stage due to lack of RTC backup battery. This causes unnecessary fixes being
 # made due to filesystem metadata time stamps being in future.
 APPEND_append = " fsck.mode=skip"
+
+# skip swupd-server from world build because of a build failure. Only
+# swupd-server-native is used so this is a safe choice.
+# The failure is: "autoreconf execution failed."
+EXCLUDE_FROM_WORLD_pn-swupd-server = "1"
